# chat-with-archive

./: .env.example  .gitignore  README.md  app.py  create.py  create_assistant.py  main.py  make_api_call.py  pyproject.toml  tool_caller.py  tools.py
routers/: chat.py  setup.py
static/: styles.css
templates/: error.html  index.html  layout.html  setup.html
templates/components/: assistant-run.html  assistant-step.html  file-viewer.html  output-widget.html  user-message.html  weather-widget.html
utils/: create_assistant.py  custom_functions.py  sse.py  threads.py  tools.py
